--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "^4.15.2",
     "mongodb": "^2.2.26",
     "nodemon": "^1.11.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-datepicker": "^0.46.0",
+    "react-native-simple-login": "^1.1.0"
   }
 }
